Alterações DAO e Front

--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Shared/_Layout.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Shared/_Layout.cshtml
@@ -38,5 +38,9 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+
+    <script type="text/javascript">
+        var rootPath = '@Url.Content("~/")';
+    </script>
 </body>
 </html>
