--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Details.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Details.cshtml
@@ -33,82 +33,108 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                @*<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Web Dev Academy</a>
+                </button>*@
+                <a class="navbar-brand" href="#">Projeto Engenharia 3</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
+                @*<ul class="nav navbar-nav navbar-right">
                     <li><a href="#">In&iacute;cio</a></li>
                     <li><a href="#">Op&ccedil;&otilde;es</a></li>
                     <li><a href="#">Perfil</a></li>
                     <li><a href="#">Ajuda</a></li>
-                </ul>
+                </ul>*@
             </div>
         </div>
     </nav>
 
     <div id="main" class="container-fluid">
-        <h3 class="page-header">Visualizar Item #1</h3>
+        <input type="hidden" id="idAluno" value="@ViewBag.Id">
+        <h3 class="page-header">Visualizar Dados do Aluno</h3>
 
         <div class="row">
             <div class="col-md-4">
-                <p><strong>Campo Um</strong></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
+                <p><strong>Nome</strong></p>
+                <p><strong id="txtAluno"></strong></p>
             </div>
 
             <div class="col-md-4">
-                <p><strong>Campo Dois</strong></p>
-                <p>Lorem ipsum dolor</p>
+                <p><strong>RA</strong></p>
+                <p><strong id="txtRa"></strong></p>
             </div>
 
             <div class="col-md-4">
-                <p><strong>Campo Três</strong></p>
-                <p>123.456.789-0</p>
+                <p><strong>Data Nascimento</strong></p>
+                <p><strong id="txtDtNascimento"></strong></p>
             </div>
 
             <div class="col-md-4">
-                <p><strong>Campo Quatro</strong></p>
-                <p>In vel sollicitudin leo, id fermentum augue.</p>
+                <p><strong>Código</strong></p>
+                <p><strong id="txtCodigo"></strong></p>
             </div>
 
             <div class="col-md-4">
-                <p><strong>Campo Cinco</strong></p>
-                <p>(00) 234-5678</p>
+                <p><strong>Validade</strong></p>
+                <p><strong id="txtValidade"></strong></p>
             </div>
 
             <div class="col-md-4">
-                <p><strong>Campo Seis</strong></p>
-                <p>Nullam ultrices elit ante.</p>
+                <p><strong>Tipo Documento</strong></p>
+                <p><strong id="txtTpDocumento"></strong></p>
             </div>
 
             <div class="col-md-4">
-                <p><strong>Campo Sete</strong></p>
-                <p>Integer finibus in ligula vitae aliquet.</p>
+                <p><strong>Curso</strong></p>
+                <p><strong id="txtCurso"></strong></p>
             </div>
 
             <div class="col-md-4">
-                <p><strong>Campo Oito</strong></p>
-                <p>Jes</p>
+                <p><strong>Modelo</strong></p>
+                <p><strong id="txtModelo"></strong></p>
             </div>
 
             <div class="col-md-4">
-                <p><strong>Campo Nove</strong></p>
-                <p>Lundo, Merkredo, Vendredo</p>
+                <p><strong>Tipo Curso</strong></p>
+                <p><strong id="txtTpCurso"></strong></p>
             </div>
 
-            <div class="col-md-8">
-                <p><strong>Campo Dez</strong></p>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    In bibendum nunc urna, at vestibulum neque pellentesque eget.
-                    Maecenas lacinia velit ante, vitae fermentum ex interdum et.
-                    In vel sollicitudin leo, id fermentum augue.
-                </p>
+            <div class="col-md-4">
+                <p><strong>Disciplina</strong></p>
+                <p><strong id="txtDisciplina"></strong></p>
+            </div>
+
+            <div class="col-md-4">
+                <p><strong>Logradouro</strong></p>
+                <p><strong id="txtLogradouro"></strong></p>
+            </div>
+
+            <div class="col-md-4">
+                <p><strong>Número</strong></p>
+                <p><strong id="txtNumero"></strong></p>
+            </div>
+
+            <div class="col-md-4">
+                <p><strong>CEP</strong></p>
+                <p><strong id="txtCep"></strong></p>
+            </div>
+
+            <div class="col-md-4">
+                <p><strong>Cidade</strong></p>
+                <p><strong id="txtCidade"></strong></p>
+            </div>
+
+            <div class="col-md-4">
+                <p><strong>Estado</strong></p>
+                <p><strong id="txtEstado"></strong></p>
+            </div>
+
+            <div class="col-md-4">
+                <p><strong>Tipo Endereço</strong></p>
+                <p><strong id="txtTpEndereco"></strong></p>
             </div>
         </div>
 
