--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Home/Index.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="jumbotron">
     <h1>Projeto Engenharia III</h1>
     @*<p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>*@
-    <p><a href="Aluno/Index" class="btn btn-primary btn-lg">Cadastro Aluno &raquo;</a></p>
+    <p><a href="Controle/Index" class="btn btn-primary btn-lg">Cadastro Aluno &raquo;</a></p>
 </div>
 
 @*<div class="row">
