Finalização do Front (CRUD)

--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Create.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Create.cshtml
@@ -53,10 +53,10 @@
                 <label for="tpDocumento">Tipo Documento</label>
                 <br />
                 <select name="tpDocumento" id="txtTpDocumento" type="text" class="form-control">
-                    <option value="cpf">CPF</option>
-                    <option value="rg">RG</option>
-                    <option value="cnh">CNH</option>
-                    <option value="passaporte">Passaporte</option>
+                    <option value="CPF">CPF</option>
+                    <option value="RG">RG</option>
+                    <option value="CNH">CNH</option>
+                    <option value="PASSAPORTE">Passaporte</option>
                 </select>
             </div>
             <br />            
@@ -157,7 +157,7 @@
         <div id="actions" class="row">
             <div class="col-md-12">
                 <button type="button" class="btn btn-primary" id="btnSalvar">Salvar</button>
-                <a href="Index" class="btn btn-default">Cancelar</a>
+                <a href="/Controle/Index" class="btn btn-default">Cancelar</a>
             </div>
         </div>
     </div>
