Alteração na Fachada

--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Details.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Details.cshtml
@@ -142,8 +142,8 @@
         <div id="actions" class="row">
             <div class="col-md-12">
                 <a href="/Controle/Index" class="btn btn-default">Fechar</a>
-                <a href="Edit" class="btn btn-primary">Editar</a>
-                <a href="#" class="btn btn-danger" data-toggle="modal" data-target="#delete-modal">Excluir</a>
+                <a id="btnEditar" class="btn btn-primary">Editar</a>
+                <a id="modalDelete" class="btn btn-danger" data-toggle="modal" data-target="#delete-modal">Excluir</a>
             </div>
         </div>
     </div>
