--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Edit.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Edit.cshtml
@@ -69,8 +69,11 @@
             </div>
 
             <div class="form-group col-md-4">
-                <label for="modelo">Modelo</label>
-                <input type="text" class="form-control" id="txtModelo" placeholder="Digite o modelo do curso">
+                <label for="modelo">Modelo</label>                
+                <select name="modelo" id="txtModelo" type="text" class="form-control">
+                    <option value="Presencial">Presencial</option>
+                    <option value="EAD">EAD</option>
+                </select>
             </div>
 
             <div class="form-group col-md-4">
