--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Create.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Create.cshtml
@@ -69,7 +69,10 @@
 
             <div class="form-group col-md-4">
                 <label for="modelo">Modelo</label>
-                <input type="text" class="form-control" id="txtModelo" placeholder="Digite o modelo do curso">
+                <select name="modelo" id="txtModelo" type="text" class="form-control">
+                    <option value="Presencial">Presencial</option>
+                    <option value="EAD">EAD</option>
+                </select>
             </div>
 
             <div class="form-group col-md-4">
