--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Home/Index.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
     <h1>Projeto Engenharia III</h1>
     @*<p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>*@
     <p><a href="Controle/Index" class="btn btn-primary btn-lg">Cadastro Aluno &raquo;</a></p>
+    <p><a href="Controle/IndexCurso" class="btn btn-primary btn-lg">Cadastro Curso &raquo;</a></p>
 </div>
 
 @*<div class="row">
