Alteracao na Fachada e criação da tela de disciplina

--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/CreateCurso.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/CreateCurso.cshtml
@@ -38,8 +38,8 @@
             <div class="form-group col-md-4">
                 <label for="tpCurso">Tipo Curso</label>
                 <select name="tpCurso" type="text" class="form-control" id="ddlTpCurso">
-                    @*<option value="Graduação">Graduação</option>
-                    <option value="Pós-Graduação">Pós-Graduação</option>*@
+                    <option value="1">EAD</option>
+                    <option value="Pós-Graduação">Pós-Graduação</option>
                 </select>
             </div>            
         </div>
