Tela de cadastrar disciplina e curso

--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Create.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Create.cshtml
@@ -36,7 +36,7 @@
                 <label for="dtNascimento">Data Nascimento</label>
                 <input type="text" class="form-control" id="txtDtNascimento" placeholder="Digite a data de nascimento">
             </div>
-            <br />            
+            <br />
 
             <h3>Documento</h3>
             <div class="form-group col-md-4">
@@ -59,38 +59,32 @@
                     <option value="PASSAPORTE">Passaporte</option>
                 </select>
             </div>
-            <br />            
+            <br />
 
             <h3>Curso</h3>
             <div class="form-group col-md-4">
                 <label for="nome">Nome</label>
-                <input type="text" class="form-control" id="txtCurso" placeholder="Digite o nome do curso">
+                <select name="nome" id="ddlCurso" type="text" class="form-control"></select>
             </div>
 
             <div class="form-group col-md-4">
                 <label for="modelo">Modelo</label>
-                <select name="modelo" id="txtModelo" type="text" class="form-control">
-                    <option value="Presencial">Presencial</option>
-                    <option value="EAD">EAD</option>
-                </select>
+                <select name="modelo" id="ddlModelo" type="text" class="form-control"></select>
             </div>
 
             <div class="form-group col-md-4">
                 <label for="tpCurso">Tipo Curso</label>
                 <br />
-                <select name="tpCurso" id="txtTpCurso" type="text" class="form-control">
-                    <option value="Graduacao">Graduação</option>
-                    <option value="Pos-Graduacao">Pós-Graduação</option>
-                </select>
+                <select name="tpCurso" id="ddlTpCurso" type="text" class="form-control"></select>
             </div>
-            <br />            
+            <br />
 
             <h3>Disciplina</h3>
             <div class="form-group col-md-12">
                 <label for="nome">Nome</label>
-                <input type="text" class="form-control" id="txtDisciplina" placeholder="Digite o nome da disciplina">
+                <select name="nome" id="ddlDisciplina" type="text" class="form-control"></select>
             </div>
-            <br />            
+            <br />
 
             <h3>Endereço</h3>
             <div class="form-group col-md-4">
