--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Home/Index.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
     @*<p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>*@
     <p><a href="Controle/Index" class="btn btn-primary btn-lg">Cadastro Aluno &raquo;</a></p>
     <p><a href="Controle/IndexCurso" class="btn btn-primary btn-lg">Cadastro Curso &raquo;</a></p>
+    <p><a href="Controle/IndexDisciplina" class="btn btn-primary btn-lg">Cadastro Disciplina &raquo;</a></p>
 </div>
 
 @*<div class="row">
