Delete Curso e Disciplina

--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Create.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Create.cshtml
@@ -52,11 +52,7 @@
             <div class="form-group col-md-4">
                 <label for="tpDocumento">Tipo Documento</label>
                 <br />
-                <select name="tpDocumento" id="txtTpDocumento" type="text" class="form-control">
-                    <option value="CPF">CPF</option>
-                    <option value="RG">RG</option>
-                    <option value="CNH">CNH</option>
-                    <option value="PASSAPORTE">Passaporte</option>
+                <select name="tpDocumento" id="ddlTpDocumento" type="text" class="form-control">                   
                 </select>
             </div>
             <br />
@@ -147,9 +143,7 @@
             <div class="form-group col-md-4">
                 <label for="tpEndereco">Tipo Endereço</label>
                 <br />
-                <select name="tpEndereco" id="txtTpEndereco" type="text" class="form-control">
-                    <option value="Residencial">Residencial</option>
-                    <option value="Comercial">Comercial</option>
+                <select name="tpEndereco" id="ddlTpEndereco" type="text" class="form-control">                    
                 </select>
             </div>
         </div>
