Finalizado crud Disciplina, Curso. Inicio Salvar Aluno

--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/CreateDisciplina.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/CreateDisciplina.cshtml
@@ -21,7 +21,7 @@
     <div id="main" class="container-fluid">
         <h2 class="page-header">Adicionar Disciplina</h2>
         <div class="row">
-            <h3>Curso</h3>
+            <h3>Disciplina</h3>
             <div class="form-group col-md-6">
                 <label for="nome">Nome</label>
                 <input type="text" class="form-control" id="txtDisciplina" placeholder="Digite o nome da disciplina">
@@ -36,7 +36,7 @@
         <div id="actions" class="row">
             <div class="col-md-12">
                 <button type="button" class="btn btn-primary" id="btnSalvar">Salvar</button>
-                <a href="/Controle/Index" class="btn btn-default">Cancelar</a>
+                <a href="/Controle/IndexDisciplina" class="btn btn-default">Cancelar</a>
             </div>
         </div>
     </div>
