--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/DeleteCurso.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/DeleteCurso.cshtml
@@ -38,7 +38,7 @@
 
         <div class="form-actions no-color">
             @Html.ActionLink("Deletar", "ExcluirCurso", new { id = Model.GetId() }) |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List", "IndexCurso")
         </div>
     }
 </div>
