--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/EditDisciplina.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/EditDisciplina.cshtml
@@ -19,33 +19,25 @@
     <br>
     <br>
     <div id="main" class="container-fluid">
-        <h2 class="page-header">Adicionar Curso</h2>
+        <input type="hidden" id="idDisciplina" value="@ViewBag.Id">
+        <h2 class="page-header">Editar Disciplina</h2>
         <div class="row">
-            <h3>Curso</h3>
-            <div class="form-group col-md-4">
+            <h3>Disciplina</h3>
+            <div class="form-group col-md-6">
                 <label for="nome">Nome</label>
-                <input type="text" class="form-control" id="txtCurso" placeholder="Digite o nome do curso">
+                <input type="text" class="form-control" id="txtDisciplina" placeholder="Digite o nome da disciplina">
             </div>
-
-            <div class="form-group col-md-4">
-                <label for="modelo">Modelo</label>
-                <select name="modelo" type="text" class="form-control" id="txtModelo">
-                    <option value="Presencial">Presencial</option>
-                    <option value="EAD">EAD</option>
+            <div class="form-group col-md-6">
+                <label for="curso">Curso</label>
+                <select name="curso" type="text" class="form-control" id="ddlCurso">
                 </select>
             </div>
-
-            <div class="form-group col-md-4">
-                <label for="tpCurso">Tipo Curso</label>
-                <select name="tpCurso" type="text" class="form-control" id="ddlTpCurso">                    
-                </select>
-            </div>            
         </div>
         <hr />
         <div id="actions" class="row">
             <div class="col-md-12">
-                <button type="button" class="btn btn-primary" id="btnSalvar">Salvar</button>
-                <a href="/Controle/IndexCurso" class="btn btn-default">Cancelar</a>
+                <button type="button" class="btn btn-primary" id="btnEditar">Editar</button>
+                <a href="/Controle/Index" class="btn btn-default">Cancelar</a>
             </div>
         </div>
     </div>
@@ -59,6 +51,6 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/Scripts/toastr")
-    @Scripts.Render("~/Scripts/app/createCurso.js")
+    @Scripts.Render("~/Scripts/app/editDisciplina.js")
 }
 
