--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/IndexCurso.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/IndexCurso.cshtml
@@ -29,17 +29,9 @@
             </td>
             <td>
                 @item.GetModeloCurso()
-            </td>                      
+            </td> 
             <td>
-                <select>
-                    @foreach (var aluno in Model)
-                    {
-                        <option value="@aluno.GetId()">@aluno.GetNome()</option>
-                    }
-                </select>
-            </td>
-            <td>
-                @Html.ActionLink("Editar", "Edit", new { id = item.GetId() }) |
+                @Html.ActionLink("Editar", "EditCurso", new { id = item.GetId() }) |
                 @Html.ActionLink("Deletar", "DeleteCurso", new { id = item.GetId() })
             </td>
         </tr>
