--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Delete.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Delete.cshtml
@@ -1,7 +1,72 @@
-﻿
+﻿@model ProjetoMatricula.Model.Aluno
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "DeleteAluno";
 }
 
-<h2>Delete</h2>
+<input type="hidden" id="id" value="@ViewBag.Id">
+<h2>Deletar Aluno</h2>
+
+<h3>Tem certeza que deseja deletar?</h3>
+<div>
+    <h4>Aluno</h4>
+    <table class="table">
+        <tr>
+            <th>
+                Nome
+            </th>
+            <th>
+                Data Nascimento
+            </th>
+            <th>
+                RA
+            </th>
+            <th>
+                Curso
+            </th>
+            <th>
+                Modelo
+            </th>
+            <th>
+                TipoCurso
+            </th>
+            <th>
+                Data Cadastro
+            </th>
+        </tr>
+        <tr>
+            <td>
+                @Model.GetNome()
+            </td>
+            <td>
+                @Model.GetDataNascimento()
+            </td>
+            <td>
+                @Model.GetRa()
+            </td>
+            <td>
+                @Model.GetCurso().GetNome()
+            </td>
+            <td>
+                @Model.GetCurso().GetModeloCurso()
+            </td>
+            <td>
+                @Model.GetCurso().GetTipoCurso().GetDescricao()
+            </td>
+            <td>
+                @Model.GetDataCadastro()
+            </td>
+        </tr>
+    </table>
+    <hr />
+    <dl class="dl-horizontal"></dl>
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            @Html.ActionLink("Delete", "Excluir", new { id = Model.GetId() }) |
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+    }
+</div>
 
