--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Index.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Index.cshtml
@@ -70,7 +70,7 @@
     </td>
      <td>
             @Html.ActionLink("Editar", "Edit", new { id = item.GetId() }) |
-            @Html.ActionLink("Detalhes", "Details", new { id = item.GetId() })
+            @Html.ActionLink("Deletar", "Delete", new { id = item.GetId() })
      </td>
 </tr>
     }
