--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Create.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Create.cshtml
@@ -58,12 +58,12 @@
             <br />
 
             <h3>Curso</h3>
-            <div class="form-group col-md-4">
+            <div class="form-group col-md-6">
                 <label for="nome">Nome</label>
                 <select name="nome" id="ddlCurso" type="text" class="form-control"></select>
             </div>
 
-            <div class="form-group col-md-4">
+            <div class="form-group col-md-6">
                 <label for="modelo">Modelo</label>
                 <select name="modelo" id="ddlModelo" type="text" class="form-control">
                     <option value="Presencial">Presencial</option>
@@ -71,11 +71,11 @@
                 </select>
             </div>
 
-            <div class="form-group col-md-4">
+            @*<div class="form-group col-md-4">
                 <label for="tpCurso">Tipo Curso</label>
                 <br />
                 <select name="tpCurso" id="ddlTpCurso" type="text" class="form-control"></select>
-            </div>
+            </div>*@
             <br />
 
             <h3>Disciplina</h3>
