--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Edit.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Edit.cshtml
@@ -53,22 +53,18 @@
             <div class="form-group col-md-4">
                 <label for="tpDocumento">Tipo Documento</label>
                 <br />
-                <select name="tpDocumento" id="txtTpDocumento" type="text" class="form-control">
-                    <option value="cpf">CPF</option>
-                    <option value="rg">RG</option>
-                    <option value="cnh">CNH</option>
-                    <option value="passaporte">Passaporte</option>
+                <select name="tpDocumento" id="txtTpDocumento" type="text" class="form-control">                   
                 </select>
             </div>
             <br />
 
             <h3>Curso</h3>
-            <div class="form-group col-md-4">
+            <div class="form-group col-md-6">
                 <label for="nome">Nome</label>
                 <input type="text" class="form-control" id="txtCurso" placeholder="Digite o nome do curso">
             </div>
 
-            <div class="form-group col-md-4">
+            <div class="form-group col-md-6">
                 <label for="modelo">Modelo</label>                
                 <select name="modelo" id="txtModelo" type="text" class="form-control">
                     <option value="Presencial">Presencial</option>
@@ -76,16 +72,14 @@
                 </select>
             </div>
 
-            <div class="form-group col-md-4">
+            @*<div class="form-group col-md-4">
                 <label for="tpCurso">Tipo Curso</label>
                 <br />
-                <select name="tpCurso" id="txtTpCurso" type="text" class="form-control">
-                    <option value="Graduacao">Graduação</option>
-                    <option value="Pos-Graduacao">Pós-Graduação</option>
+                <select name="tpCurso" id="txtTpCurso" type="text" class="form-control">                   
                 </select>
-            </div>
+            </div>*@
+            
             <br />
-
             <h3>Disciplina</h3>
             <div class="form-group col-md-12">
                 <label for="nome">Nome</label>
@@ -151,9 +145,7 @@
             <div class="form-group col-md-4">
                 <label for="tpEndereco">Tipo Endereço</label>
                 <br />
-                <select name="tpEndereco" id="txtTpEndereco" type="text" class="form-control">
-                    <option value="Residencial">Residencial</option>
-                    <option value="Comercial">Comercial</option>
+                <select name="tpEndereco" id="txtTpEndereco" type="text" class="form-control">                  
                 </select>
             </div>
         </div>
