--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Edit.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Edit.cshtml
@@ -53,7 +53,7 @@
             <div class="form-group col-md-4">
                 <label for="tpDocumento">Tipo Documento</label>
                 <br />
-                <select name="tpDocumento" id="txtTpDocumento" type="text" class="form-control">                   
+                <select name="tpDocumento" id="txtTpDocumento" type="text" class="form-control">
                 </select>
             </div>
             <br />
@@ -65,7 +65,7 @@
             </div>
 
             <div class="form-group col-md-6">
-                <label for="modelo">Modelo</label>                
+                <label for="modelo">Modelo</label>
                 <select name="modelo" id="txtModelo" type="text" class="form-control">
                     <option value="Presencial">Presencial</option>
                     <option value="EAD">EAD</option>
@@ -75,10 +75,10 @@
             @*<div class="form-group col-md-4">
                 <label for="tpCurso">Tipo Curso</label>
                 <br />
-                <select name="tpCurso" id="txtTpCurso" type="text" class="form-control">                   
+                <select name="tpCurso" id="txtTpCurso" type="text" class="form-control">
                 </select>
             </div>*@
-            
+
             <br />
             <h3>Disciplina</h3>
             <div class="form-group col-md-12">
@@ -145,9 +145,13 @@
             <div class="form-group col-md-4">
                 <label for="tpEndereco">Tipo Endereço</label>
                 <br />
-                <select name="tpEndereco" id="txtTpEndereco" type="text" class="form-control">                  
+                <select name="tpEndereco" id="txtTpEndereco" type="text" class="form-control">
                 </select>
             </div>
+        </div>
+        <hr />
+        <div id="divAlerta" class="row mb-4 mt-4">
+            <p id="mensagemErro" class="col-md-12"></p>
         </div>
         <hr />
         <div id="actions" class="row">
