--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Create.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Create.cshtml
@@ -52,36 +52,8 @@
             <div class="form-group col-md-4">
                 <label for="tpDocumento">Tipo Documento</label>
                 <br />
-                <select name="tpDocumento" id="ddlTpDocumento" type="text" class="form-control">                   
+                <select name="tpDocumento" id="ddlTpDocumento" type="text" class="form-control">
                 </select>
-            </div>
-            <br />
-
-            <h3>Curso</h3>
-            <div class="form-group col-md-6">
-                <label for="nome">Nome</label>
-                <select name="nome" id="ddlCurso" type="text" class="form-control"></select>
-            </div>
-
-            <div class="form-group col-md-6">
-                <label for="modelo">Modelo</label>
-                <select name="modelo" id="ddlModelo" type="text" class="form-control">
-                    <option value="Presencial">Presencial</option>
-                    <option value="EAD">EAD</option>
-                </select>
-            </div>
-
-            @*<div class="form-group col-md-4">
-                <label for="tpCurso">Tipo Curso</label>
-                <br />
-                <select name="tpCurso" id="ddlTpCurso" type="text" class="form-control"></select>
-            </div>*@
-            <br />
-
-            <h3>Disciplina</h3>
-            <div class="form-group col-md-12">
-                <label for="nome">Nome</label>
-                <select name="nome" id="ddlDisciplina" type="text" class="form-control"></select>
             </div>
             <br />
 
@@ -143,9 +115,30 @@
             <div class="form-group col-md-4">
                 <label for="tpEndereco">Tipo Endereço</label>
                 <br />
-                <select name="tpEndereco" id="ddlTpEndereco" type="text" class="form-control">                    
+                <select name="tpEndereco" id="ddlTpEndereco" type="text" class="form-control">
                 </select>
             </div>
+            <br />
+
+            <h3>Curso/Disciplina</h3>
+            <div class="form-group col-md-4">
+                <label for="nome">Nome</label>
+                <select name="nome" id="ddlCurso" type="text" class="form-control"></select>
+            </div>
+
+            <div class="form-group col-md-4">
+                <label for="nome">Nome</label>
+                <select name="nome" id="ddlDisciplina" type="text" class="form-control"></select>
+            </div>
+            
+            <div class="form-group col-md-4">
+                <label for="modelo">Modelo</label>
+                <select name="modelo" id="ddlModelo" type="text" class="form-control">
+                    <option value="Presencial">Presencial</option>
+                    <option value="EAD">EAD</option>
+                </select>
+            </div>
+            <br />
         </div>
         <hr />
         <div id="actions" class="row">
