Correção e criaçao de regras de negocio

--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Create.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/Create.cshtml
@@ -125,15 +125,15 @@
 
             <h3>Curso/Disciplina</h3>
             <div class="form-group col-md-4">
-                <label for="nome">Nome</label>
+                <label for="nome">Curso</label>
                 <select name="nome" id="ddlCurso" type="text" class="form-control"></select>
             </div>
 
             <div class="form-group col-md-4">
-                <label for="nome">Nome</label>
+                <label for="nome">Disciplina</label>
                 <select name="nome" id="ddlDisciplina" type="text" class="form-control"></select>
             </div>
-            
+
             <div class="form-group col-md-4">
                 <label for="modelo">Modelo</label>
                 <select name="modelo" id="ddlModelo" type="text" class="form-control">
@@ -142,6 +142,10 @@
                 </select>
             </div>
             <br />
+        </div>
+        <hr />
+        <div id="divAlerta" class="row mb-4 mt-4">
+            <p id="mensagemErro" class="col-md-12"></p>
         </div>
         <hr />
         <div id="actions" class="row">
