--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/EditDisciplina.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/EditDisciplina.cshtml
@@ -37,7 +37,7 @@
         <div id="actions" class="row">
             <div class="col-md-12">
                 <button type="button" class="btn btn-primary" id="btnEditar">Editar</button>
-                <a href="/Controle/Index" class="btn btn-default">Cancelar</a>
+                <a href="/Controle/IndexDisciplina" class="btn btn-default">Cancelar</a>
             </div>
         </div>
     </div>
