--- a/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/DeleteDisciplina.cshtml
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Views/Controle/DeleteDisciplina.cshtml
@@ -39,7 +39,7 @@
             @*<button type="button" class="btn btn-primary" id="btnDeletar">Deletar</button>*@
             @*<input type="submit" value="Delete" class="btn btn-default" /> |*@
             @Html.ActionLink("Deletar", "ExcluirDisciplina", new { id = Model.GetId() }) |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List", "IndexDisciplina")
         </div>
     }
 </div>
